--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ ul {
 }
 
 a {
-	color: #d1d1d1;
+	color: #e6e4e4;
 	text-decoration: none;
 }
 
@@ -183,22 +183,26 @@ p {
 	}
 
 	header {
-		display: list-item;
+		display: flex;
 		flex-direction: column;
 		align-items: center;
 		width: 100%;
 		max-width: 400px;
-		padding: 0;
+		padding: 5px 0;
 	}
 
 	ul {
-		display: list-item;
+		display: flex;
 		flex-direction: column;
 		list-style: none;
 		align-items: center;
 		width: 100%;
-		max-width: 400px;
-		padding: 0;
+		max-width: 250px;
+		padding: 5px 0;
+		padding-left: 0;
+		margin-left: 0;
+		margin: 0 auto;
+		gap: 10px;
 	}
 
 	ul a {
@@ -209,6 +213,9 @@ p {
 		text-align: center;
 		padding: 0;
 		border-bottom: 1px solid #ddd;
+		list-style: none !important;
+		padding-left: 0;
+		margin-left: 0;
 	}
 
 	h1 {
